<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>RESTSuo</groupId>
  <artifactId>RESTSuo</artifactId>
  <version>0.0.1-SNAPSHOT</version>
    <properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>${maven.compiler.source}</maven.compiler.target>
		<junit.jupiter.version>5.8.1</junit.jupiter.version>
		<junit.platform.version>1.8.1</junit.platform.version>
		<allure.version>2.25.0</allure.version>
		<aspectj.version>1.9.21</aspectj.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<version>${junit.jupiter.version}</version>
			<scope>test</scope>
		</dependency>
		 <dependency>
	    <groupId>io.rest-assured</groupId>
	    <artifactId>rest-assured</artifactId>
	    <version>4.4.0</version>	    
	</dependency>
	<!-- https://mvnrepository.com/artifact/io.rest-assured/rest-assured -->
	<dependency>
	    <groupId>io.rest-assured</groupId>
	    <artifactId>rest-assured</artifactId>
	    <version>4.4.0</version>
	    <scope>test</scope>
	</dependency>
	<!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
		<dependency>
		    <groupId>org.postgresql</groupId>
		    <artifactId>postgresql</artifactId>
		    <version>42.7.1</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.jsoup/jsoup -->
		<dependency>
		    <groupId>org.jsoup</groupId>
		    <artifactId>jsoup</artifactId>
		    <version>1.17.2</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/com.icegreen/greenmail -->
		<dependency>
		    <groupId>com.icegreen</groupId>
		    <artifactId>greenmail</artifactId>
		    <version>2.0.1</version>
		    <scope>test</scope>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.jsoup/jsoup -->
		<dependency>
		    <groupId>org.jsoup</groupId>
		    <artifactId>jsoup</artifactId>
		    <version>1.18.1</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/com.icegreen/greenmail-junit5 -->
			<dependency>
			    <groupId>com.icegreen</groupId>
			    <artifactId>greenmail-junit5</artifactId>
			    <version>2.0.1</version>
			    <scope>test</scope>
			</dependency>

		
		
		<!-- https://mvnrepository.com/artifact/com.sun.xml.messaging.saaj/saaj-impl -->
		<dependency>
		    <groupId>com.sun.xml.messaging.saaj</groupId>
		    <artifactId>saaj-impl</artifactId>
		    <version>3.0.3</version>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<version>${junit.jupiter.version}</version>
			<scope>test</scope>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
		<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
		<dependency>
		    <groupId>commons-io</groupId>
		    <artifactId>commons-io</artifactId>
		    <version>2.16.1</version>
		</dependency>
        <dependency>
            <groupId>com.automation-remarks</groupId>
            <artifactId>video-recorder-junit5</artifactId>
            <version>LATEST</version>
        </dependency>
       <!-- https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple -->
		<dependency>
		    <groupId>com.googlecode.json-simple</groupId>
		    <artifactId>json-simple</artifactId>
		    <version>1.1.1</version>
		</dependency>
	

		<dependency>
			<groupId>org.junit.platform</groupId>
			<artifactId>junit-platform-runner</artifactId>
			<version>${junit.platform.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
	        <groupId>io.qameta.allure</groupId>
	        <artifactId>allure-junit5</artifactId>
	        <scope>test</scope>
	    </dependency>
	    <dependency>
		    <groupId>org.seleniumhq.selenium</groupId>
		    <artifactId>selenium-java</artifactId>
		    <version>4.13.0</version>
		</dependency>
	</dependencies>
	<dependencyManagement>
	    <dependencies>
	        <dependency>
	            <groupId>io.qameta.allure</groupId>
	            <artifactId>allure-bom</artifactId>
	            <version>${allure.version}</version>
	            <type>pom</type>
	            <scope>import</scope>
	        </dependency>
	    </dependencies>
	</dependencyManagement>
	<build>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.22.0</version>
				<configuration>
					<argLine>
						
						-javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
						--illegal-access=permit
					</argLine>
				</configuration>
				<dependencies>
			        <dependency>
			            <groupId>org.aspectj</groupId>
			            <artifactId>aspectjweaver</artifactId>
			            <version>${aspectj.version}</version>
			        </dependency>
			    </dependencies>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>2.22.0</version>
				<configuration>
					<argLine>
						--illegal-access=permit
					</argLine>
				</configuration>
			</plugin>
			
		</plugins>
	</build> 
</project>